[package]
name = "daily-zhihu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-dup = "1.2.2"
async-h1 = "2.3.2"
smol = "1.2.5"
async-native-tls = "0.3.3"
chrono = "0.4.19"
once_cell = "1.8.0"

serde = { version = "1.0", features = ["derive"] }
http-types = { version = "2.12.0", default-features = false }
tera = { version = "1.12.1", default-features = false }
