[package]
name = "daily-zhihu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-dup = "1.2.2"
async-h1 = "2.3.3"
smol = "1.2.5"
async-native-tls = "0.4.0"
chrono = "0.4.19"
once_cell = "1.10.0"

serde = { version = "1.0.136", features = ["derive"] }
http-types = { version = "2.12.0", default-features = false }
tera = { version = "1.15.0", default-features = false }
