[package]
name = "daily-zhihu"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-dup = "1.2.2"
async-h1 = "2.3.4"
smol = "1.3.0"
async-native-tls = { version = "0.5.0", features = [ "vendored" ] }
chrono = "0.4.31"
once_cell = "1.18.0"

serde = { version = "1.0.192", features = ["derive"] }
http-types = { version = "2.12.0", default-features = false }
minijinja = "1.0.10"
